# simdtext

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MASTER_ACTION_PLAN.md  PLAN.md  README.md  REPORT_audit_bugs.md  REPORT_audit_bugs_v2.md  REPORT_audit_comparison.md  REPORT_audit_comparison_v2.md  REPORT_audit_quality.md  REPORT_audit_quality_v2.md  RESEARCH_optimization.md  RESEARCH_optimization_v2.md  WORK_QUEUE.md  cmake_presets.json  vcpkg.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
benchmarks/: DISASM_ANALYSIS.md  HOTPATH_ANALYSIS.md  RESULTS.md  bench_all.cpp  bench_core.cpp  bench_count_newlines.cpp  compare.md
cli/: main.cpp
cmake/: CPM.cmake  simdtext-config.cmake.in
docs/: API.md  API_AUDIT.md  ARCHITECTURE.md  BENCHMARKS.md  BUILDING.md  BUILD_AUDIT.md  CONTRIBUTING.md  RESEARCH_NOTES.md
examples/: stats.cpp  test.cpp
examples/real_world/: csv_scanner.cpp  log_parser.cpp  url_handler.cpp  utf8_validator.cpp
fuzz/: fuzz_encode.cpp  fuzz_url.cpp  fuzz_utf8.cpp
include/simdtext/: ascii.hpp  config.hpp  csv.hpp  diff.hpp  encode.hpp  expected.hpp  export.hpp  file.hpp  hash.hpp  json.hpp  lines.hpp  log.hpp  markdown.hpp  parallel.hpp  pattern.hpp  scan.hpp  simdtext.hpp  str.hpp  types.hpp  url.hpp  utf8.hpp  version.hpp  xml.hpp
include/simdtext/c/: simdtext.h
include/simdtext/detail/: cpu_detect.hpp  hex_table.hpp  utf8_validator.hpp
src/c/: c_api.cpp
src/config/: config.cpp
src/csv/: csv.cpp
src/detail/: cpu_detect.cpp  simd_avx2.cpp  simd_avx512.cpp  simd_dispatch.cpp  simd_neon.cpp  simd_scalar.cpp  simd_sse2.cpp
src/diff/: diff.cpp
src/encode/: base64_simd.cpp  encode.cpp
src/file/: file.cpp
src/hash/: hash.cpp
src/highway/: simd_hwy.cpp
src/json/: json.cpp
src/log/: log.cpp
src/markdown/: markdown.cpp
src/parallel/: parallel.cpp
src/pattern/: pattern.cpp
src/scalar/: scalar.cpp
src/str/: str.cpp
src/url/: url.cpp
src/xml/: xml.cpp
tests/: main.cpp  test_ascii.cpp  test_config.cpp  test_csv.cpp  test_diff.cpp  test_encode.cpp  test_file.cpp  test_framework.hpp  test_hash.cpp  test_json.cpp  test_lines.cpp  test_log.cpp  test_markdown.cpp  test_parallel.cpp  test_pattern.cpp  test_scan.cpp  test_str.cpp  test_url.cpp  test_utf8.cpp  test_xml.cpp
